# QuadrupedRobot

./: README.md
ensamble1_description/ensamble1_description/: CMakeLists.txt  package.xml
ensamble1_description/ensamble1_description/launch/: controller.launch  controller.yaml  display.launch.py  gazebo.launch
ensamble1_description/ensamble1_description/meshes/: ankle_link_1.stl  base_link.stl  hip_link_1.stl  leg_link_1.stl
ensamble1_description/ensamble1_description/urdf/: ensamble1.gazebo  ensamble1.trans  ensamble1.xacro  materials.xacro
