<?xml version="1.0"?>
<package format="3">
  <name>ensamble1_description</name>
  <version>0.0.0</version>
  <description>The ensamble1_description package</description>

  <maintainer email="andres34f@gmai.com">syuntoku14</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
  </export>
</package>
